# weather-scraper

./: .gitignore  Dockerfile  README.md  analysis.ipynb  cron.Dockerfile  cronjobs  docker-compose.yaml  pyproject.toml  requirements.txt
scripts/: init-db.sql
tests/: test_spider.py
tomorrow/: __main__.py  scrapy.cfg
tomorrow/tomorrow/: items.py  middlewares.py  pipelines.py  settings.py
tomorrow/tomorrow/spiders/: tomorrow.py
tomorrow/tomorrow/tomorrow/: items.py  pipelines.py  settings.py
tomorrow/tomorrow/tomorrow/spiders/: tomorrow.py
